# discord_hotdeal_bot

./: .gitignore  README.md  crawler.py  crawling.py  crawling_selenium.ipynb  discord_bot.py  discord_test.py  docker-compose.yaml  kafka_pub.py  kafka_sub.py  pyproject.toml  requirements.txt  run_scanner.sh  scanner.py  scanner_bs4.py  status.json
.github/workflows/: crawler.yml  dikscord_invite_link_validation.yml  discord_invite_link_validation.yml  scanner.yml  unified-lambda-builder.yml
bot/: bot.py
crawler/: crawler.py  selectors.yaml
docker/: docker-compose.yaml
lambda-selenium-docker-crawler/: Dockerfile  main.py  requirements.txt  selectors.yml
lambda-selenium-docker-scanner/: Dockerfile  main.py  requirements.txt  selectors.yml
legacy/: discord_test.py  docker-compose.yaml  run_scanner.sh  scanner.py
scanner/: scanner.py  selectors.yaml
