[project]
name = "hotdeal-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "curl-cffi>=0.13.0",
    "discord>=2.3.2",
    "dotenv>=0.9.9",
    "openai>=2.8.1",
    "pendulum>=3.1.0",
    "playwright>=1.56.0",
    "psycopg2-binary>=2.9.11",
    "pyyaml>=6.0.3",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "selenium>=4.38.0",
]
